trunk/Archive2/61/a8a67bfc01f3ec/output
main.cpp: In function 'int main()':
main.cpp:24:37: error: 'trim' was not declared in this scope
             file.push_back(trim(word));
                                     ^
